# bili-ai-summarizer

./: .env.example  .gitignore  Makefile  README.md  __main__.py  app.py  create_shortcut.py  pyproject.toml  start.pyw
bili_summarizer/: __init__.py  asr.py  cli.py  config.py  output.py  subtitle.py  summarizer.py
bili_summarizer/templates/: __init__.py  compare.py  critique.py  entity.py  narrative.py  timeline.py  tutorial.py
