[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bili-ai-summarizer"
version = "0.4.1"
description = "Bз«ҷи§Ҷйў‘AIжҖ»з»“е·Ҙе…·пјҡеӯ—е№•жҸҗеҸ–вҶ’йў„еӨ„зҗҶвҶ’LLMз»“жһ„еҢ–жҖ»з»“вҶ’ж—¶й—ҙжҲіMarkdownиҫ“еҮә"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Hurricane"},
]

dependencies = [
    "openai>=1.0.0",
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
asr = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0.0",
]
cuda = [
    "faster-whisper>=1.0.0",
    "yt-dlp>=2024.0.0",
    "ctranslate2[nvidia]",
]
browser-cookie = [
    "browser-cookie3>=0.19.0",
]
gui = [
    "streamlit>=1.30.0",
    "pywebview>=5.0.0",
]
desktop = [
    "streamlit>=1.30.0",
    "pywebview>=5.0.0",
    "pywin32>=306; sys_platform == 'win32'",
]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
bili-summarize = "bili_summarizer.cli:main"

[tool.setuptools.packages.find]
include = ["bili_summarizer*"]

[tool.ruff]
line-length = 100
target-version = "py310"
